--- a/app/templates/course-materials.hbs
+++ b/app/templates/course-materials.hbs
@@ -1,1 +1,5 @@
-{{outlet}}
+<div class="backtolink">
+  {{#link-to "course" model}}{{t "general.backToCourse"}}{{/link-to}}
+</div>
+{{course-summary-header course=model}}
+{{course-materials course=model sortBy=sortBy setSortBy=(action (mut sortBy))}}
