--- a/app/templates/course.hbs
+++ b/app/templates/course.hbs
@@ -1,1 +1,17 @@
-{{outlet}}
+{{ilios-course-details
+  course=model
+  editable=editable
+  showDetails=details
+  setShowDetails=(action (mut details))
+  courseLeadershipDetails=courseLeadershipDetails
+  courseObjectiveDetails=courseObjectiveDetails
+  courseTaxonomyDetails=courseTaxonomyDetails
+  courseCompetencyDetails=courseCompetencyDetails
+  courseManageLeadership=courseManageLeadership
+  setCourseLeadershipDetails=(action (mut courseLeadershipDetails))
+  setCourseObjectiveDetails=(action (mut courseObjectiveDetails))
+  setCourseTaxonomyDetails=(action (mut courseTaxonomyDetails))
+  setCourseCompetencyDetails=(action (mut courseCompetencyDetails))
+  setCourseManageLeadership=(action (mut courseManageLeadership))
+}}
+{{focusing-outlet}}
