--- a/app/templates/course/publication-check.hbs
+++ b/app/templates/course/publication-check.hbs
@@ -1,1 +1,2 @@
-{{outlet}}
+{{#link-to "course" model}}{{t "general.backToTitle" title=model.title}}{{/link-to}}
+{{course-publicationcheck course=model}}
