--- a/app/templates/course/publishall.hbs
+++ b/app/templates/course/publishall.hbs
@@ -1,1 +1,3 @@
-{{outlet}}
+{{#link-to "course" model}}{{t "general.backToTitle" title=model.title}}{{/link-to}}
+
+{{publish-all-sessions sessions=model.sessions saved=(action "returnToList")}}
